2001-03-29  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm (orac_start_algorithm_engines): Fix problem with -noeng
	(for some reason it had not set a default hash ref)

2001-03-21  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/UFTI.pm (calc_orac_headers): Make sure we run the base
	class version to get the ORAC_ headers

2001-03-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/KAPVIEW.pm: AGI_DIR removal now done by ORAC::Inst::Defn

	* Print.pm: Add ORAC::Event dependency

	* Recipe.pm (_check_obey_status_string): Fix pattern match for
	task name

	* Frame/CGS4.pm (findnsubs): Use more intelligence when searching
	for .I components

2001-03-19  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/UFTI.pm: Add ORAC_ header support

	* Frame/UKIRT.pm: Add ORAC_ header support

	* Frame/IRCAM2.pm: Add ORAC_ header support

	* Frame.pm (calc_orac_headers): Add support for ORAC_
	keywords. Add translate_hdr

	* Xorac.pm: Fix spelling of my name

2001-03-16  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm (_add_code_to_recipe): Return "good" status at recipe end

	* Core.pm (orac_print_configuration): Fix $$log_options

2001-02-01  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/CGS4.pm (inout): Use _split_fname and _join_fname

	* Frame/JCMT.pm: Can  use base class inout() method

	* Recipe.pm (_check_obey_status_string): Handle { "mon" } syntax
	for hash key. Make sure that the monolith name is reasonable
	before using delete.

2001-01-26  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm (execute): Add status check on return. Print message
	when monolith is bad

	* Inst/Defn.pm: @DIRS_TO_UNLINK has to be updated in the BEGIN
	block else the dir is not removed if oracdr fails to get past all
	the loading.

2001-01-19  Timothy Jenness  <t.jenness@jach.hawaii.edu>

	* Display/KAPVIEW.pm (engine_launch_object): Fix typo in method name

2001-01-18  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/Defn.pm: mkdir needs two args in perl versions < 5.6.0