@@ -1,3 +1,7 @@
+2001-04-11  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Frame.pm: Fix pod error and remove header() and userheader() 
+
 2001-03-29  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Core.pm (orac_start_algorithm_engines): Fix problem with -noeng
